# netclop

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml
netclop/: __init__.py  cli.py  constants.py  geo.py  log.py  netutils.py  networkensemble.py  networkops.py  nodecentrality.py  plot.py  sigclu.py  sigcore.py  typing.py  upsetplot.py
netclop/cli/: commands.py  files.py  gui.py  options.py
netclop/config/: default_config.yaml
netclop/ensemble/: centrality.py  ensemble.py  netutils.py  sigclu.py  upsetplot.py
netclop/geo/: net.py  plot.py
notebooks/: markov.ipynb
tranetclu/: cli.py  networkops.py
